--- a/notes.html
+++ b/notes.html
@@ -2,6 +2,5 @@
 
 <p>br brakes <br>
 <em> em is for italicising text </em> <br>
-<mark> mark is for highlighting text </mark> <br> </p>
-<sub> abc <\sub>
-<sup> abc <\sup>
+<sub> abc </sub> <br>
+<sup> abc </sup> </p>
