--- a/notes.html
+++ b/notes.html
@@ -4,3 +4,6 @@
 <em> em is for italicising text </em> <br>
 <sub> abc </sub> <br>
 <sup> abc </sup> </p>
+<strong> makes it bold </strong>
+
+block line elements create blocks around content vs inline element which just flow with the text
