--- a/notes.html
+++ b/notes.html
@@ -6,4 +6,11 @@
 <sup> abc </sup> </p>
 <strong> makes it bold </strong>
 
-block line elements create blocks around content vs inline element which just flow with the text
+<p> block line elements create blocks around content vs inline element which just flow with the text </p>
+
+<p> To create an ordered list you have to: <br>
+<ol> <li> write the opening tag ol
+<li> add elements to the list with the tag li
+  <ul> <li>remember that li doesn't necessarily need a closing tag as html will infer it
+  <li> ol and ul on the other hand alwyas require closing tags</ul>
+<li> write a closing tag</ol></p>
