--- a/notes.html
+++ b/notes.html
@@ -1,16 +1,27 @@
 <p> A markup is a special text which tells html how to diplay stuff <br> </p>
 
-<p>br brakes <br>
-<em> em is for italicising text </em> <br>
-<sub> abc </sub> <br>
-<sup> abc </sup> </p>
-<strong> makes it bold </strong>
+<p> This is a list of markups: 
+ <ul> 
+    <li>br brakes <br>
+    <li><em> em is for italicising text </em> <br>
+    <li><sub> abc </sub> <br>
+    <li><sup> abc </sup> </p>
+    <li><strong> makes it bold </strong>
+</ul>
 
 <p> block line elements create blocks around content vs inline element which just flow with the text </p>
 
 <p> To create an ordered list you have to: <br>
-<ol> <li> write the opening tag ol
+<ol> 
+<li> write the opening tag ol
 <li> add elements to the list with the tag li
-  <ul> <li>remember that li doesn't necessarily need a closing tag as html will infer it
-  <li> ol and ul on the other hand alwyas require closing tags</ul>
-<li> write a closing tag</ol></p>
+  <ul> 
+    <li>remember that li (just likep) doesn't necessarily need a closing tag as html will infer it when it sees the next tag of that type
+    <li> ol and ul on the other hand alwyas require closing tags
+  </ul>
+<li> write a closing tag
+</ol>
+</p>
+
+<p> In order to add an hyperlink, you need to use the a element and the href attribute as follows <br>
+  <a href="https://www.netflix.com/browse"> Netflix </a>
