--- a/notes.html
+++ b/notes.html
@@ -23,5 +23,20 @@
 </ol>
 </p>
 
-<p> In order to add an hyperlink, you need to use the a element and the href attribute as follows <br>
-  <a href="https://www.netflix.com/browse"> Netflix </a>
+<p> In order to add an hyperlink, you need to use the a element, the href attribute and the url as follows <br>
+  <a href="https://www.netflix.com/browse"> Netflix </a> <br>
+ a url is composed of:<br>
+ <ol>
+ <li> A protocol, such as:
+  <ul>
+   <li> http
+   <li> https
+   <li> file
+  </ul>
+ <li> :// or :/// for files
+ <li> the domain name or file path
+</ol>
+
+<p> To display images use the tag img and the attributes src (source of image-either url or file) and alt (text to show in place of image if it doesn't load) as follows: <br>
+ <img src="https://fakeurl.example.net/fish.png" alt="Fish">
+ 
