--- a/notes.html
+++ b/notes.html
@@ -38,5 +38,5 @@
 </ol>
 
 <p> To display images use the tag img and the attributes src (source of image-either url or file) and alt (text to show in place of image if it doesn't load) as follows: <br>
- <img src="https://fakeurl.example.net/fish.png" alt="Fish">
+ <img src="https://www.rover.com/blog/everything-you-need-to-know-about-doggo-lingo/" alt="Dogs">
  
