--- a/notes.html
+++ b/notes.html
@@ -25,6 +25,7 @@
 
 <p> In order to add an hyperlink, you need to use the a element, the href attribute and the url as follows <br>
   <a href="https://www.netflix.com/browse"> Netflix </a> <br>
+If you want the link to open in a new window rather than the one you're on, use the attribute target="_blank" <br>
  a url is composed of:<br>
  <ol>
  <li> A protocol, such as:
