--- a/notes.html
+++ b/notes.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html> 
+<html lang="en">
+ <head> 
+  <title> html notes
+  </title>
+ </head>
+<body>
 <p> A markup is a special text which tells html how to diplay stuff <br> </p>
 
 <p> This is a list of markups: 
@@ -40,4 +47,6 @@ If you want the link to open in a new window rather than the one you're on, use 
 
 <p> To display images use the tag img and the attributes src (source of image-either url or file) and alt (text to show in place of image if it doesn't load) as follows: <br>
  <img src="https://placebear.com/800/600" alt="Bears">
+<body>
+</html>
  
