--- a/notes.html
+++ b/notes.html
@@ -5,6 +5,12 @@
   </title>
  </head>
 <body>
+<p> need the tag !DOCUTYPE html to turn your script into a document, the document then needs to have two parts:
+ <ol>
+  <li> head:NEEDS to contain the title of the page (it's gonna be displayed in the tab) plys it can include scripts, cascading style sheets, metadata (e.g. keywords for search engines)
+  <li> where most of the actual contents are (images, links lists, etc)
+ </ol>
+
 <p> A markup is a special text which tells html how to diplay stuff <br> </p>
 
 <p> This is a list of markups: 
@@ -12,7 +18,7 @@
     <li>br brakes <br>
     <li><em> em is for italicising text </em> <br>
     <li><sub> abc </sub> <br>
-    <li><sup> abc </sup> </p>
+    <li><sup> abc </sup> 
     <li><strong> makes it bold </strong>
 </ul>
 
@@ -28,8 +34,7 @@
   </ul>
 <li> write a closing tag
 </ol>
-</p>
-
+ 
 <p> In order to add an hyperlink, you need to use the a element, the href attribute and the url as follows <br>
   <a href="https://www.netflix.com/browse"> Netflix </a> <br>
 If you want the link to open in a new window rather than the one you're on, use the attribute target="_blank" <br>
@@ -47,6 +52,5 @@ If you want the link to open in a new window rather than the one you're on, use 
 
 <p> To display images use the tag img and the attributes src (source of image-either url or file) and alt (text to show in place of image if it doesn't load) as follows: <br>
  <img src="https://placebear.com/800/600" alt="Bears">
-<body>
-</html>
- 
+</body>
+</html> 
