--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,7 @@
  <head> 
   <title> html notes
   </title>
-  <link rel="stylesheet" href="https://github.com/alice-cg/html.test/commit/c6b8f5c5a8190c6265cf6c7942a49bcf3fb383f5">
+  <link rel="stylesheet" href="https://github.com/alice-cg/html.test/blob/master/style.css">
  </head>
 <body>
 <p> need the tag !DOCUTYPE html to turn your script into a document, the document then needs to have two parts:
